--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ h1 {
     /* Background color */
     color: white;
     /* Text color */
+
+    margin-top: 300px;
 }
 
 /* Styling for the subheading element */
